--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ES2020",
+    "module": "nodenext",
     "lib": ["ES2020", "DOM"],
     "outDir": "./public",
-    "rootDir": "./public",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "allowJs": true
   },
-  "include": ["public/*.ts"],
+  "include": ["public/*.ts", "src/map.ts"],
   "exclude": ["node_modules"]
 }
